# ewasd

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
ewasd/: __init__.py  __main__.py  cli.py  completions.py  core.py
tests/: test_add_file.py  test_cli_workspace_flag.py  test_completions.py  test_core.py  test_migrate.py  test_workspace_resolution.py
